updated a lot of design and alignment issues

--- a/frontend/src/Dashboard/dashboard.css
+++ b/frontend/src/Dashboard/dashboard.css
@@ -16,8 +16,12 @@
 }
 
 .workout-list {
-  justify-content: flex-start;
-  flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap; 
+  overflow-y: auto; 
+  max-height: 800px;
+  padding: 10px;
+  gap: 20px;
 }
 
 .active {
@@ -68,6 +72,7 @@
   overflow: hidden;
   background-color: #edb8ff;
   max-width: 100%;
+  text-align:center;
 }
 
 
@@ -104,6 +109,7 @@
   border: none;
   border-radius: 4px;
   font-size: 1rem;
+  margin-left: 20px;
 }
 
 .explore-page {
@@ -130,7 +136,8 @@
 
 .explore-title {
   justify-content: flex-start;
-  margin-left: 0;
+  margin-left: 75px;
+  color: black;
 }
 
 .add-selected {
@@ -419,4 +426,8 @@
   text-align: center;
   margin: 0 auto;
   margin-top: 10px; /* Spacing from the list */
+}
+
+.input-div {
+  margin-left:50px;
 }
